--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 ## Database Properties
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/anagrams
+spring.datasource.url=jdbc:postgresql://localhost:5432/database
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 
-server.port=8083
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 server.error.whitelabel.enabled=false
@@ -14,4 +14,3 @@ logging.level.com.example.mybatis.demo.mapper=DEBUG
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-
