--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,8 @@
 ## Database Properties
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/database
+spring.datasource.url=jdbc:postgresql://localhost:5432/anagram
 spring.datasource.username=postgres
 spring.datasource.password=postgres
-
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
